# LdragodestructorAI

./: .gitattributes  .gitignore  AGENTIC_SYSTEM_GUIDE.md  ARCHITECTURE.md  CMakeLists.txt  EXTENDED_TOOLS_GUIDE.md  QUICK_REFERENCE.md  TODO.md  tooltest.md
models/: README.md  phi3.gguf.part01  phi3.gguf.part02  phi3.gguf.part03  reassemble_phi3.ps1
portfolio/: portfolio.html  style.css
src/: main.cpp  turboquant.hpp
